<resources>
    <string name="no_internet">No internet connection to download data</string>
    <string name="check_update_info">Checking update…</string>
    <string name="download_data_info">Downloading cards, please be patient.\nIt will take several minutes…</string>

    <string name="card_name">Name</string>
    <string name="card_effect">Effect</string>
    <string name="card_set">Set</string>
    <string name="card_type">Type</string>
    <string name="card_rarity">Rarity</string>
    <string name="card_class">Class</string>
    <string name="card_flavor">Flavor</string>
    <string name="card_artist">Artist</string>

    <string name="text_copied">Copied to clipboard</string>
    <string name="card_iv_content_description">Card name</string>

    <string name="settings_activity_title">Settings</string>
    <string name="settings_activity_general_header">General</string>
    <string name="settings_activity_language">Language</string>
    <string name="menu_class_pager_settings">Settings</string>
</resources>
