<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.wojdor.hearthstonecards.app.view.CardDetailView
        android:id="@+id/cardNameCardDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:label="@string/card_name"
        tools:text="Naturalize" />

    <com.wojdor.hearthstonecards.app.view.CardDetailView
        android:id="@+id/cardEffectCardDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:label="@string/card_effect"
        tools:text="Destroy a minion. Your opponent draws 2 cards." />

    <com.wojdor.hearthstonecards.app.view.CardDetailView
        android:id="@+id/cardSetCardDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:label="@string/card_set"
        tools:text="Classic" />

    <com.wojdor.hearthstonecards.app.view.CardDetailView
        android:id="@+id/cardRarityCardDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:label="@string/card_rarity"
        tools:text="Common" />

    <com.wojdor.hearthstonecards.app.view.CardDetailView
        android:id="@+id/cardClassCardDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:label="@string/card_class"
        tools:text="Druid" />

    <com.wojdor.hearthstonecards.app.view.CardDetailView
        android:id="@+id/cardFlavorCardDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:label="@string/card_flavor"
        tools:text="Another one bites the dust." />

    <com.wojdor.hearthstonecards.app.view.CardDetailView
        android:id="@+id/cardArtistCardDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:label="@string/card_flavor"
        tools:text="Leo Che" />
</LinearLayout>
